For countries which use comma instead of decimal point in float numbers, vlc saves the values to vlcrc as e.g. 0,500 but after next vlc restart, vlc shows them as 0,000
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
This is utterly flawed. I'm not going to explain AGAIN why saving config file in the locale rather than in a shared way is stupid (hell, do we translate command line parameters and config file options names ?).
(In [12961]) Work-around wxWidgets overriding the LC_NUMERIC setting (closes #406 (closed))
In any case, that's ugly and thread-safe. The proper solution would
be to reimplement an atof() version that is locale-independant and
use in the many places that expect C/American float numbers. Even
then, there might be some buggy underlying libraries breakage
(e.g. Live555 ?).
Tested on Linux (both UTF-8 and Latin-x locales).
Needs testing on Win32.