re fix the stupid float ","/"." error. Please don't break it once again (fixes #406)